# rfc

./: .gitignore  .run_ut.sh.swp  1  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile.am  Makefile.in  NOTICE  README.md  RFCbase.sh  RfcRebootCronschedule.sh  aclocal.m4  configure  configure.ac  cov_build.sh  getRFC.sh  isFeatureEnabled.sh  rfc.properties  rfcInit.sh  run_l2.sh  run_l2_reboot_trigger.sh  run_ut.sh
.github/: CODEOWNERS
.github/agents/: embedded-programmer.agent.md  l2-test-runner.agent.md  legacy-refactor-specialist.agent.md
.github/instructions/: build-system.instructions.md  c-embedded.instructions.md  cpp-testing.instructions.md  shell-scripts.instructions.md
.github/skills/bdd-feature-generator/: SKILL.md
.github/skills/platform-portability-checker/: SKILL.md
.github/skills/quality-checker/: README.md  SKILL.md
.github/skills/technical-documentation-writer/: SKILL.md
.github/skills/triage-logs/: SKILL.md
.github/workflows/: L1-Test.yaml  L2-tests.yml  code-coverage.yml  native_full_build.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1
docs/: RFC_LOG_INTERPRETATION.md  architecture.md  data-processing-flow.md  rfc-parameter-runtime-priority.md  sequence-diagrams.md
rfcMgr/: Makefile.am  Makefile.in  configure.ac  mtlsUtils.cpp  mtlsUtils.h  rdk_debug.h  rdkc_rfc_xconf_handler.cpp  rdkc_rfc_xconf_handler.h  rfcInit.cpp  rfc_common.cpp  rfc_common.h  rfc_main.cpp  rfc_manager.cpp  rfc_manager.h  rfc_mgr_iarm.h  rfc_mgr_json.h  rfc_mgr_key.h  rfc_otlp_instrumentation.cpp  rfc_xconf_handler.cpp  rfc_xconf_handler.h  xconf_handler.cpp  xconf_handler.h
rfcMgr/gtest/: .Makefile.am.swp  .gtest_main.cpp.swp  .gtest_tr181api.cpp.swp  Makefile.am  configure.ac  gtest_main.cpp  gtest_rfcapi.cpp  gtest_rfcmain.cpp  gtest_tr181api.cpp  gtest_utils.cpp  gtest_xconf.cpp
rfcMgr/gtest/mocks/: Iarm.h  IarmBusMock.h  common_device_api.c  common_device_api.h  curl_debug.c  downloadUtil.c  downloadUtil.h  json_parse.c  json_parse.h  jsonlog.c  libIARMCore.h  mock_curl.cpp  mock_iptables_init  rdk_debug.h  rdk_fwdl_utils.c  rdk_fwdl_utils.h  rdkv_cdl_log_wrapper.c  rdkv_cdl_log_wrapper.h  rfc.properties  rfcMgr_stubs.cpp  secure_wrapper.h  system_utils.c  system_utils.h  tr181_store_writer.cpp  tr181_store_writer.h  tr181store.ini  urlHelper.c  urlHelper.h
rfcMgr/gtest/mocks/cimplog/: cimplog.h
rfcMgr/gtest/mocks/wdmp-c/: wdmp-c.c  wdmp-c.h  wdmp_internal.c  wdmp_internal.h
rfcapi/: Makefile.am  Makefile.in  rfc_otlp_instrumentation.h  rfcapi.cpp  rfcapi.h
rfcapi/docs/: README.md
test/: Makefile.am  Makefile.in  rfcTest.cpp
test/docs/: L2_Analysis_Report.md  l2-test-coverage-analysis.md
test/functional-tests/features/: rfc_data.feature  rfc_device_offline_status.feature  rfc_dynamic_cert_selector.feature  rfc_factory_reset.feature  rfc_feature_enable.feature  rfc_initialization_failure.feature  rfc_invalid_accountid.feature  rfc_override_rfc_prop.feature  rfc_reboot_required.feature  rfc_setget_param.feature  rfc_single_instance_run.feature  rfc_static_cert_selector.feature  rfc_tr181_setget_local_param.feature  rfc_trigger_reboot.feature  rfc_trigger_reboot.py  rfc_unknown_accountid.feature  rfc_valid_accountid.feature  rfc_webpa.feature  rfc_xconf_communication.feature  rfc_xconf_configsetHash_time.feature  rfc_xconf_request_params.feature
test/functional-tests/tests/: rfc_test_helper.py  test_rfc_device_offline_status.py  test_rfc_dynamic_static_cert_selector.py  test_rfc_factory_reset.py  test_rfc_feature_enable.py  test_rfc_initialization_failure.py  test_rfc_invalid_accountid.py  test_rfc_override_rfc_prop.py  test_rfc_setget_param.py  test_rfc_single_instance_run.py  test_rfc_static_cert_selector.py  test_rfc_tr181_setget_local_param.py  test_rfc_trigger_reboot.py  test_rfc_unknown_accountid.py  test_rfc_valid_accountid.py  test_rfc_webpa.py  test_rfc_xconf_communication.py  test_rfc_xconf_configsethash_time.py  test_rfc_xconf_reboot.py  test_rfc_xconf_request_params.py  test_rfc_xconf_rfc_data.py
test/test-artifacts/mockxconf/: rfcData.js  xconf-rfc-response-unknown-accountid.json  xconf-rfc-response.json
tr181api/: Makefile.am  Makefile.in  tr181api.cpp  tr181api.h
tr181api/docs/: README.md
utils/: .tr181utils.h.swp  Makefile.am  Makefile.in  config.h.in  jsonhandler.cpp  jsonhandler.h  tr181utils.cpp  tr181utils.h  trsetutils.cpp  trsetutils.h
